Plugins/UnrealDotNet/Source/UnrealDotNetRuntime/Public/Generate/Export/AActor.h

	
	DOTNET_EXPORT auto E_PROP_AActor_Layers_GET(AActor* Ptr) { return ConvertToManage_TemplatePointerDescription(Ptr->Layers); }
	DOTNET_EXPORT void E_PROP_AActor_Layers_SET(AActor* Ptr, INT_PTR Value) { Ptr->Layers = *(TArray<FName>*)Value; }
	
	DOTNET_EXPORT auto E_PROP_AActor_MinNetUpdateFrequency_GET(AActor* Ptr) { return Ptr->MinNetUpdateFrequency; }
	DOTNET_EXPORT void E_PROP_AActor_MinNetUpdateFrequency_SET(AActor* Ptr, float Value) { Ptr->MinNetUpdateFrequency = Value; }
	
	DOTNET_EXPORT auto E_PROP_AActor_NetCullDistanceSquared_GET(AActor* Ptr) { return Ptr->NetCullDistanceSquared; }
	DOTNET_EXPORT void E_PROP_AActor_NetCullDistanceSquared_SET(AActor* Ptr, float Value) { Ptr->NetCullDistanceSquared = Value; }
	
	DOTNET_EXPORT auto E_PROP_AActor_NetPriority_GET(AActor* Ptr) { return Ptr->NetPriority; }
	DOTNET_EXPORT void E_PROP_AActor_NetPriority_SET(AActor* Ptr, float Value) { Ptr->NetPriority = Value; }
	
	DOTNET_EXPORT auto E_PROP_AActor_NetTag_GET(AActor* Ptr) { return Ptr->NetTag; }
	DOTNET_EXPORT void E_PROP_AActor_NetTag_SET(AActor* Ptr, int32 Value) { Ptr->NetTag = Value; }
	
	DOTNET_EXPORT auto E_PROP_AActor_NetUpdateFrequency_GET(AActor* Ptr) { return Ptr->NetUpdateFrequency; }
	DOTNET_EXPORT void E_PROP_AActor_NetUpdateFrequency_SET(AActor* Ptr, float Value) { Ptr->NetUpdateFrequency = Value; }
	
	DOTNET_EXPORT void E_EVENT_ADD_AActor_OnActorBeginOverlap(AActor* Obj)
	{
		auto wrapper = NewObject<UManageEventSender>(UCoreShell::GetInstance());
		wrapper->ManageDelegateName = "InvokeEvent_OnActorBeginOverlap";
		wrapper->SourceObject = Obj;
		Obj->OnActorBeginOverlap.AddDynamic(wrapper, &UManageEventSender::Wrapper_FActorBeginOverlapSignature);
	}
	DOTNET_EXPORT void E_EVENT_DEL_AActor_OnActorBeginOverlap(AActor* Obj)
	{
	}
	DOTNET_EXPORT void E_EVENT_ADD_AActor_OnActorEndOverlap(AActor* Obj)
	{
		auto wrapper = NewObject<UManageEventSender>(UCoreShell::GetInstance());
		wrapper->ManageDelegateName = "InvokeEvent_OnActorEndOverlap";
		wrapper->SourceObject = Obj;
		Obj->OnActorEndOverlap.AddDynamic(wrapper, &UManageEventSender::Wrapper_FActorEndOverlapSignature);
	}
	DOTNET_EXPORT void E_EVENT_DEL_AActor_OnActorEndOverlap(AActor* Obj)
	{
	}
	DOTNET_EXPORT void E_EVENT_ADD_AActor_OnActorHit(AActor* Obj)
	{
		auto wrapper = NewObject<UManageEventSender>(UCoreShell::GetInstance());
		wrapper->ManageDelegateName = "InvokeEvent_OnActorHit";
		wrapper->SourceObject = Obj;
		Obj->OnActorHit.AddDynamic(wrapper, &UManageEventSender::Wrapper_FActorHitSignature);
	}
	DOTNET_EXPORT void E_EVENT_DEL_AActor_OnActorHit(AActor* Obj)
	{
	}
	DOTNET_EXPORT void E_EVENT_ADD_AActor_OnBeginCursorOver(AActor* Obj)
	{
		auto wrapper = NewObject<UManageEventSender>(UCoreShell::GetInstance());
		wrapper->ManageDelegateName = "InvokeEvent_OnBeginCursorOver";
		wrapper->SourceObject = Obj;
		Obj->OnBeginCursorOver.AddDynamic(wrapper, &UManageEventSender::Wrapper_FActorBeginCursorOverSignature);
	}
	DOTNET_EXPORT void E_EVENT_DEL_AActor_OnBeginCursorOver(AActor* Obj)
	{
	}
	DOTNET_EXPORT void E_EVENT_ADD_AActor_OnDestroyed(AActor* Obj)
	{
		auto wrapper = NewObject<UManageEventSender>(UCoreShell::GetInstance());
		wrapper->ManageDelegateName = "InvokeEvent_OnDestroyed";
		wrapper->SourceObject = Obj;
		Obj->OnDestroyed.AddDynamic(wrapper, &UManageEventSender::Wrapper_FActorDestroyedSignature);
	}
	DOTNET_EXPORT void E_EVENT_DEL_AActor_OnDestroyed(AActor* Obj)
	{
	}
	DOTNET_EXPORT void E_EVENT_ADD_AActor_OnEndCursorOver(AActor* Obj)
	{
		auto wrapper = NewObject<UManageEventSender>(UCoreShell::GetInstance());
		wrapper->ManageDelegateName = "InvokeEvent_OnEndCursorOver";
		wrapper->SourceObject = Obj;
		Obj->OnEndCursorOver.AddDynamic(wrapper, &UManageEventSender::Wrapper_FActorEndCursorOverSignature);
	}
	DOTNET_EXPORT void E_EVENT_DEL_AActor_OnEndCursorOver(AActor* Obj)
	{
	}
	DOTNET_EXPORT auto E_PROP_AActor_PrimaryActorTick_GET(AActor* Ptr) { return (INT_PTR)&(Ptr->PrimaryActorTick); }
	
	DOTNET_EXPORT auto E_PROP_AActor_Tags_GET(AActor* Ptr) { return ConvertToManage_TemplatePointerDescription(Ptr->Tags); }
	DOTNET_EXPORT void E_PROP_AActor_Tags_SET(AActor* Ptr, INT_PTR Value) { Ptr->Tags = *(TArray<FName>*)Value; }
	
	
	DOTNET_EXPORT INT_PTR E_NewObject_AActor(UObject* Parent, char* Name)
	{
		return (INT_PTR)NewObject<AActor>(Parent, FName(UTF8_TO_TCHAR(Name)));
	}
	DOTNET_EXPORT auto E_AActor_ActorHasTag(AActor* Self, char* Tag)
	{
		auto _p0 = ConvertFromManage_FName(Tag);
		return Self->ActorHasTag(_p0);
	}
	DOTNET_EXPORT auto E_AActor_ActorToWorld(AActor* Self)
	{
		return (INT_PTR) new FTransform(Self->ActorToWorld());
	}
	DOTNET_EXPORT auto E_AActor_AddActorLocalOffset(AActor* Self, INT_PTR DeltaLocation, bool bSweep, INT_PTR OutSweepHitResult, ETeleportType Teleport)
	{
		auto _p0 = *(FVector*)DeltaLocation;
		auto _p1 = bSweep;
		auto _p2 = (FHitResult*)OutSweepHitResult;
		auto _p3 = Teleport;
		Self->AddActorLocalOffset(_p0, _p1, _p2, _p3);
	}
	DOTNET_EXPORT auto E_AActor_AddActorLocalRotation(AActor* Self, INT_PTR DeltaRotation, bool bSweep, INT_PTR OutSweepHitResult, ETeleportType Teleport)
	{
		auto _p0 = *(FRotator*)DeltaRotation;
		auto _p1 = bSweep;
		auto _p2 = (FHitResult*)OutSweepHitResult;
		auto _p3 = Teleport;
		Self->AddActorLocalRotation(_p0, _p1, _p2, _p3);
	}
	DOTNET_EXPORT auto E_AActor_AddActorLocalRotation_o1(AActor* Self, INT_PTR DeltaRotation, bool bSweep, INT_PTR OutSweepHitResult, ETeleportType Teleport)
	{
		auto& _p0 = *(FQuat*)DeltaRotation;
		auto _p1 = bSweep;
		auto _p2 = (FHitResult*)OutSweepHitResult;
		auto _p3 = Teleport;
		Self->AddActorLocalRotation(_p0, _p1, _p2, _p3);
	}
	DOTNET_EXPORT auto E_AActor_AddActorLocalTransform(AActor* Self, INT_PTR NewTransform, bool bSweep, INT_PTR OutSweepHitResult, ETeleportType Teleport)
	{
		auto& _p0 = *(FTransform*)NewTransform;
		auto _p1 = bSweep;
		auto _p2 = (FHitResult*)OutSweepHitResult;
		auto _p3 = Teleport;
		Self->AddActorLocalTransform(_p0, _p1, _p2, _p3);
	}
	DOTNET_EXPORT auto E_AActor_AddActorWorldOffset(AActor* Self, INT_PTR DeltaLocation, bool bSweep, INT_PTR OutSweepHitResult, ETeleportType Teleport)
	{
		auto _p0 = *(FVector*)DeltaLocation;
		auto _p1 = bSweep;
		auto _p2 = (FHitResult*)OutSweepHitResult;
		auto _p3 = Teleport;
		Self->AddActorWorldOffset(_p0, _p1, _p2, _p3);
	}
	DOTNET_EXPORT auto E_AActor_AddActorWorldRotation(AActor* Self, INT_PTR DeltaRotation, bool bSweep, INT_PTR OutSweepHitResult, ETeleportType Teleport)
	{
		auto _p0 = *(FRotator*)DeltaRotation;
		auto _p1 = bSweep;
		auto _p2 = (FHitResult*)OutSweepHitResult;
		auto _p3 = Teleport;
		Self->AddActorWorldRotation(_p0, _p1, _p2, _p3);
	}
	DOTNET_EXPORT auto E_AActor_AddActorWorldRotation_o1(AActor* Self, INT_PTR DeltaRotation, bool bSweep, INT_PTR OutSweepHitResult, ETeleportType Teleport)
	{
		auto& _p0 = *(FQuat*)DeltaRotation;
		auto _p1 = bSweep;
		auto _p2 = (FHitResult*)OutSweepHitResult;
		auto _p3 = Teleport;
		Self->AddActorWorldRotation(_p0, _p1, _p2, _p3);
	}
	DOTNET_EXPORT auto E_AActor_AddActorWorldTransform(AActor* Self, INT_PTR DeltaTransform, bool bSweep, INT_PTR OutSweepHitResult, ETeleportType Teleport)
	{
		auto& _p0 = *(FTransform*)DeltaTransform;
		auto _p1 = bSweep;
		auto _p2 = (FHitResult*)OutSweepHitResult;
		auto _p3 = Teleport;
		Self->AddActorWorldTransform(_p0, _p1, _p2, _p3);
	}
	DOTNET_EXPORT auto E_AActor_AddComponent(AActor* Self, char* TemplateName, bool bManualAttachment, INT_PTR RelativeTransform, UObject* ComponentTemplateContext)
	{
		auto _p0 = ConvertFromManage_FName(TemplateName);
		auto _p1 = bManualAttachment;
		auto& _p2 = *(FTransform*)RelativeTransform;
		auto _p3 = ComponentTemplateContext;
		return ConvertToManage_ObjectPointerDescription(Self->AddComponent(_p0, _p1, _p2, _p3));
	}
	DOTNET_EXPORT auto E_AActor_AddInstanceComponent(AActor* Self, UActorComponent* Component)
	{
		auto _p0 = Component;
		Self->AddInstanceComponent(_p0);
	}
	DOTNET_EXPORT auto E_AActor_AddOwnedComponent(AActor* Self, UActorComponent* Component)
	{
		auto _p0 = Component;
		Self->AddOwnedComponent(_p0);
	}
	DOTNET_EXPORT auto E_AActor_AddTickPrerequisiteActor(AActor* Self, AActor* PrerequisiteActor)
	{
		auto _p0 = PrerequisiteActor;
		Self->AddTickPrerequisiteActor(_p0);
	}
	DOTNET_EXPORT auto E_AActor_AddTickPrerequisiteComponent(AActor* Self, UActorComponent* PrerequisiteComponent)
	{
		auto _p0 = PrerequisiteComponent;
		Self->AddTickPrerequisiteComponent(_p0);
	}
	DOTNET_EXPORT auto E_AActor_AllowReceiveTickEventOnDedicatedServer(AActor* Self)
	{
		return Self->AllowReceiveTickEventOnDedicatedServer();
	}
	DOTNET_EXPORT auto E_AActor_ApplyWorldOffset(AActor* Self, INT_PTR InOffset, bool bWorldShift)
	{
		auto& _p0 = *(FVector*)InOffset;
		auto _p1 = bWorldShift;
		Self->ApplyWorldOffset(_p0, _p1);
	}
	DOTNET_EXPORT auto E_AActor_AttachToActor(AActor* Self, AActor* ParentActor, INT_PTR AttachmentRules, char* SocketName)
	{
		auto _p0 = ParentActor;
		auto& _p1 = *(FAttachmentTransformRules*)AttachmentRules;
		auto _p2 = ConvertFromManage_FName(SocketName);
		Self->AttachToActor(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_AActor_AttachToComponent(AActor* Self, USceneComponent* Parent, INT_PTR AttachmentRules, char* SocketName)
	{
		auto _p0 = Parent;
		auto& _p1 = *(FAttachmentTransformRules*)AttachmentRules;
		auto _p2 = ConvertFromManage_FName(SocketName);
		Self->AttachToComponent(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_AActor_BecomeViewTarget(AActor* Self, APlayerController* PC)
	{
		auto _p0 = PC;
		Self->BecomeViewTarget(_p0);
	}
	DOTNET_EXPORT auto E_AActor_BeginPlay(AActor* Self)
	{
		((E_PROTECTED_WRAP_AActor*)Self)->BeginPlay_WRAP();
	}
	DOTNET_EXPORT auto E_AActor_CalculateComponentsBoundingBoxInLocalSpace(AActor* Self, bool bNonColliding)
	{
		auto _p0 = bNonColliding;
		return (INT_PTR) new FBox(Self->CalculateComponentsBoundingBoxInLocalSpace(_p0));
	}
	DOTNET_EXPORT auto E_AActor_CanBeBaseForCharacter(AActor* Self, APawn* Pawn)
	{
		auto _p0 = Pawn;
		return Self->CanBeBaseForCharacter(_p0);
	}
	DOTNET_EXPORT auto E_AActor_CanEverTick(AActor* Self)
	{
		return Self->CanEverTick();
	}
	DOTNET_EXPORT auto E_AActor_CheckActorComponents(AActor* Self)
	{
		return ((E_PROTECTED_WRAP_AActor*)Self)->CheckActorComponents_WRAP();
	}
	DOTNET_EXPORT auto E_AActor_CheckComponentInstanceName(AActor* Self, char* InName)
	{
		auto _p0 = ConvertFromManage_FName(InName);
		Self->CheckComponentInstanceName(_p0);
	}
	DOTNET_EXPORT auto E_AActor_CheckStillInWorld(AActor* Self)
	{
		return Self->CheckStillInWorld();
	}
	DOTNET_EXPORT auto E_AActor_ClearComponentOverlaps(AActor* Self)
	{
		Self->ClearComponentOverlaps();
	}
	DOTNET_EXPORT auto E_AActor_ClearCrossLevelReferences(AActor* Self)
	{
		Self->ClearCrossLevelReferences();
	}
	DOTNET_EXPORT auto E_AActor_ClearInstanceComponents(AActor* Self, bool bDestroyComponents)
	{
		auto _p0 = bDestroyComponents;
		Self->ClearInstanceComponents(_p0);
	}
	DOTNET_EXPORT auto E_AActor_CopyRemoteRoleFrom(AActor* Self, AActor* CopyFromActor)
	{
		auto _p0 = CopyFromActor;
		Self->CopyRemoteRoleFrom(_p0);
	}
	DOTNET_EXPORT auto E_AActor_CreateComponentFromTemplate(AActor* Self, UActorComponent* Template, char* InName)
	{
		auto _p0 = Template;
		auto _p1 = ConvertFromManage_FName(InName);
		return ConvertToManage_ObjectPointerDescription(Self->CreateComponentFromTemplate(_p0, _p1));
	}
	DOTNET_EXPORT auto E_AActor_DebugShowOneComponentHierarchy(AActor* Self, USceneComponent* SceneComp, int32 NestLevel, bool bShowPosition)
	{
		auto _p0 = SceneComp;
		auto& _p1 = NestLevel;
		auto _p2 = bShowPosition;
		Self->DebugShowOneComponentHierarchy(_p0, _p1, _p2);
	}
	DOTNET_EXPORT auto E_AActor_Destroy(AActor* Self, bool bNetForce, bool bShouldModifyLevel)
	{
		auto _p0 = bNetForce;
		auto _p1 = bShouldModifyLevel;
		return Self->Destroy(_p0, _p1);
	}